force-app/main/default/objects/ampi__Result__c/ampi__Result__c.object-meta.xml
<CustomObject>
    <description>Target and result values for a specific reporting period, project area, project indicator, and disaggregation value</description>
    <label>Result</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>