force-app/main/default/objects/ampi__Result__c/fields/ampi__Actual_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Actual_Internal_Code__c</fullName>
    <description>[NOT IN USE] Internal code for actual results.</description>
    <label>Actual Internal Code</label>
    <type>TextArea</type>
</CustomField>