force-app/main/default/objects/ampi__Result__c/fields/ampi__Baseline_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Baseline_Internal_Code__c</fullName>
    <description>[NOT IN USE] Baseline result for internal code</description>
    <label>Baseline Result Internal Code</label>
    <type>TextArea</type>
</CustomField>