force-app/main/default/objects/ampi__Result__c/fields/ampi__Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Comments__c</fullName>
    <description>Text area field to store comments on results</description>
    <inlineHelpText>These comments may include variations on this indicator, or nuances about how you collect the data etc.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>