force-app/main/default/objects/ampi__Result__c/fields/ampi__Data_Tracked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Tracked__c</fullName>
    <description>Picklist to specify if created and updated date shoule be tracked for target, result or both</description>
    <label>Data Tracked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>