force-app/main/default/objects/ampi__Result__c/fields/ampi__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Type__c</fullName>
    <description>This formula field copies data type from parent project indicator</description>
    <formula>ampi__Project_Indicator__r.ampi__Data_Type__c</formula>
    <label>Data Type</label>
    <type>Text</type>
</CustomField>