force-app/main/default/objects/ampi__Result__c/fields/ampi__Disaggregation_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field specifies the disaggregation value this result maps to</description>
    <label>Disaggregation Value</label>
    <referenceTo>ampi__Disaggregation_Value__c</referenceTo>
    <relationshipLabel>Results (Disaggregation Value Level 2)</relationshipLabel>
    <relationshipName>Results1</relationshipName>
    <type>Lookup</type>
</CustomField>