force-app/main/default/objects/ampi__Result__c/fields/ampi__Female_Result__c.field-meta.xml
<CustomField>
    <fullName>ampi__Female_Result__c</fullName>
    <description>Number field to store result for a quantitative indicator with sex-disaggregated value as female</description>
    <label>Female Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>