force-app/main/default/objects/ampi__Result__c/fields/ampi__Female_Target__c.field-meta.xml
<CustomField>
    <fullName>ampi__Female_Target__c</fullName>
    <description>Number field to store target for a quantitative indicator with sex-disaggregated value as female</description>
    <label>Female Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>