force-app/main/default/objects/ampi__Result__c/fields/ampi__Female_Target_Milestone__c.field-meta.xml
<CustomField>
    <fullName>ampi__Female_Target_Milestone__c</fullName>
    <description>Picklist to store target for a milestone indicator with sex-disaggregated value as female</description>
    <label>Female Target Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Milestone</valueSetName>
    </valueSet>
</CustomField>