force-app/main/default/objects/ampi__Result__c/fields/ampi__Geographical_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geographical_Area__c</fullName>
    <description>This formula field copies geographical area from parent project indicator geographic area</description>
    <formula>ampi__Project_Indicator_Geographic_Area__r.ampi__Geographic_Area__r.ampi__Name_Translated__c</formula>
    <label>Geographical Area</label>
    <type>Text</type>
</CustomField>