force-app/main/default/objects/ampi__Result__c/fields/ampi__Male_Result_Milestone__c.field-meta.xml
<CustomField>
    <fullName>ampi__Male_Result_Milestone__c</fullName>
    <description>Picklist to store result for a milestone indicator with sex-disaggregated value as male</description>
    <label>Male Result Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Milestone</valueSetName>
    </valueSet>
</CustomField>