force-app/main/default/objects/ampi__Result__c/fields/ampi__Male_Result_Qualitative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Male_Result_Qualitative__c</fullName>
    <description>Rich text field to store result for a qualitative indicator with sex-disaggregated value as male</description>
    <label>Male Result Qualitative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>