force-app/main/default/objects/ampi__Result__c/fields/ampi__Male_Target__c.field-meta.xml
<CustomField>
    <fullName>ampi__Male_Target__c</fullName>
    <description>Number field to store target for a quantitative indicator with sex-disaggregated value as male</description>
    <label>Male Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>