force-app/main/default/objects/ampi__Result__c/fields/ampi__Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator__c</fullName>
    <description>Describes the Indicator for which Results and Targets are captured</description>
    <label>Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Project_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>