force-app/main/default/objects/ampi__Result__c/fields/ampi__Project_Indicator_Geographic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator_Geographic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is to specify the project indicator geographic area</description>
    <label>Project Indicator Geographic Area</label>
    <referenceTo>ampi__Project_Indicator_Geographic_Area__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>