force-app/main/default/objects/ampi__Result__c/fields/ampi__Project_Indicator_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator_Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is to specify the projct indicator reporting period</description>
    <label>Project Indicator Reporting Period</label>
    <referenceTo>ampi__Project_Indicator_Reporting_Period__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>