force-app/main/default/objects/ampi__Result__c/fields/ampi__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Name__c</fullName>
    <description>This formula field copies the project name from parent project</description>
    <formula>ampi__Project_Indicator_Reporting_Period__r.ampi__Project_Indicator__r.ampi__Project__r.ampi__Name_Translated__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>