force-app/main/default/objects/ampi__Result__c/fields/ampi__Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_End_Date__c</fullName>
    <description>This formula field copies the reporting period end date from parent reporting period</description>
    <formula>ampi__Project_Indicator_Reporting_Period__r.ampi__Reporting_Period__r.ampi__Reporting_Period_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>