force-app/main/default/objects/ampi__Result__c/fields/ampi__Result_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Created_Date__c</fullName>
    <description>Date/time field to populate whenever any one of the result value fields is first populated. This is populated by workflow rules on Result.</description>
    <label>Result Created Date</label>
    <type>DateTime</type>
</CustomField>