force-app/main/default/objects/ampi__Result__c/fields/ampi__Result_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Last_Modified_Date__c</fullName>
    <description>Date/time field to populate whenever any of the result value fields is updated. This is populated by workflow rules on Result.</description>
    <label>Result Last Modified Date</label>
    <type>DateTime</type>
</CustomField>