force-app/main/default/objects/ampi__Result__c/fields/ampi__Result_Milestone_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Milestone_Value__c</fullName>
    <description>Picklist to store result for a milestone indicator that are not disaggregated by sex</description>
    <label>Result Milestone Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Milestone</valueSetName>
    </valueSet>
</CustomField>