force-app/main/default/objects/ampi__Result__c/fields/ampi__Result_Qualitative_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Qualitative_Value__c</fullName>
    <description>Rich text field to store result for a qualitative indicator that are not disaggregated by sex</description>
    <label>Result Qualitative Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>