force-app/main/default/objects/ampi__Result__c/fields/ampi__Result_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Value__c</fullName>
    <description>Number field to store result for a quantitative indicator that are not disaggregated by sex</description>
    <inlineHelpText>Dispalys the result value for indicators that are not disaggregated by sex.</inlineHelpText>
    <label>Result Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>