force-app/main/default/objects/ampi__Result__c/fields/ampi__Results_Current_As_Of__c.field-meta.xml
<CustomField>
    <fullName>ampi__Results_Current_As_Of__c</fullName>
    <description>Date field to store the date when the results or source data were collected</description>
    <label>Results Current As Of</label>
    <type>Date</type>
</CustomField>