force-app/main/default/objects/ampi__Result__c/fields/ampi__Rounded_Result__c.field-meta.xml
<CustomField>
    <fullName>ampi__Rounded_Result__c</fullName>
    <description>This formula field calculates the result value rounded to specified number of decimals</description>
    <formula>ROUND(ampi__Result_Value__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rounded Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>