force-app/main/default/objects/ampi__Result__c/fields/ampi__Rounded_Target__c.field-meta.xml
<CustomField>
    <fullName>ampi__Rounded_Target__c</fullName>
    <description>This formula field calculates the target value rounded to specified number of decimals</description>
    <formula>ROUND( ampi__Target_Value__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rounded Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>