force-app/main/default/objects/ampi__Result__c/fields/ampi__Target_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Internal_Code__c</fullName>
    <description>[NOT IN USE] Internal code for target results</description>
    <label>Target Internal Code</label>
    <type>TextArea</type>
</CustomField>