force-app/main/default/objects/ampi__Result__c/fields/ampi__Target_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Last_Modified_Date__c</fullName>
    <description>Date/time field to populate whenever any of the target value fields are updated. This is populated by workflow rules on Result.</description>
    <label>Target Last Modified Date</label>
    <type>DateTime</type>
</CustomField>