force-app/main/default/objects/ampi__Result__c/fields/ampi__Target_Milestone_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Milestone_Value__c</fullName>
    <description>Picklist to store target for a milestone indicator that are not disaggregated by sex</description>
    <label>Target Milestone Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Milestone</valueSetName>
    </valueSet>
</CustomField>