force-app/main/default/objects/ampi__Result__c/fields/ampi__Target_Qualitative_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Qualitative_Value__c</fullName>
    <description>Rich text field to store target for a qualitative indicator that are not disaggregated by sex</description>
    <label>Target Qualitative Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>