force-app/main/default/objects/ampi__Result__c/fields/ampi__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>ampi__Target_Value__c</fullName>
    <description>Number field to store target for a quantitative indicator that are not disaggregated by sex</description>
    <inlineHelpText>Displays the target value for indicators that are not disaggregated by sex.</inlineHelpText>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>