force-app/main/default/objects/ampi__Result__c/fields/ampi__Unknown_Result__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unknown_Result__c</fullName>
    <description>Picklist to store result for a milestone indicator with sex-disaggregated value as unknown</description>
    <label>Unknown Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>