force-app/main/default/objects/ampi__Result__c/fields/ampi__Unknown_Result_Milestone__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unknown_Result_Milestone__c</fullName>
    <description>Rich text field to store result for a qualitative indicator with sex-disaggregated value as unknown</description>
    <label>Unknown Result Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Milestone</valueSetName>
    </valueSet>
</CustomField>