force-app/main/default/objects/ampi__Result__c/fields/ampi__Unknown_Result_Qualitative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unknown_Result_Qualitative__c</fullName>
    <description>Number field to store result for a quantitative indicator with sex-disaggregated value as unknown</description>
    <label>Unknown Result Qualitative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>