force-app/main/default/objects/ampi__Result__c/fields/ampi__Unknown_Target_Qualitative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Unknown_Target_Qualitative__c</fullName>
    <description>Rich text field to store target for a qualitative indicator with sex-disaggregated value as unknown</description>
    <label>Unknown Target Qualitative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>