force-app/main/default/objects/ampi__Result__c/fields/Project_Indicator_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Indicator_Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is to specify the project indicator service type</description>
    <label>Project Indicator Service Type</label>
    <referenceTo>Project_Indicator_Service_Type__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>