force-app/main/default/objects/ampi__Result__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Project_Indicator__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ampi__Project_Indicator_Reporting_Period__c</columns>
    <columns>ampi__Project_Indicator_Geographic_Area__c</columns>
    <columns>ampi__Target_Value__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ampi__Project_Name__c</columns>
    <columns>ampi__Geographical_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>